docs: document all the tokens

--- a/src/components/composition/Wrap/Wrap.module.scss
+++ b/src/components/composition/Wrap/Wrap.module.scss
@@ -3,7 +3,7 @@
 $spacings: xs, sm, md, lg, xl, fluid, fluid-lg;
 
 .wrap {
-  margin: 0 auto;
+  margin-inline: auto;
   max-width: 90em; // 1440px
   padding: 0 var(--mobius-spacing-md);
   width: 100%;
