--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,6 @@
 @use 'utilities/text' as textUtilities;
 @use 'utilities/theme' as themeUtilities;
 
+@use '../components/composition/Grid/Grid';
+@use '../components/composition/Grid/GridItem';
 @use '../components/composition/Wrap/Wrap';
