--- a/src/components/react/canvas/Section/Section.module.scss
+++ b/src/components/react/canvas/Section/Section.module.scss
@@ -1,5 +1,5 @@
 .section {
-  background: var(--mobius-skin-background);
-  color: var(--mobius-skin-color);
+  background: var(--evg-skin-background);
+  color: var(--evg-skin-color);
   overflow: hidden;
 }
