--- a/src/docs/components/Placeholder/Placeholder.scss
+++ b/src/docs/components/Placeholder/Placeholder.scss
@@ -1,7 +1,7 @@
 docs-placeholder {
-  background: var(--mobius-skin-background-muted-light);
-  border: 2px dashed var(--mobius-skin-border-color-muted-light);
-  color: var(--mobius-skin-color-muted-light);
+  background: var(--evg-skin-background-muted-light);
+  border: 2px dashed var(--evg-skin-border-color-muted-light);
+  color: var(--evg-skin-color-muted-light);
   display: block;
-  padding: var(--mobius-spacing-md);
+  padding: var(--evg-spacing-md);
 }
