--- a/src/docs/foundations/tokens/blocks/Tokens/Tokens.module.scss
+++ b/src/docs/foundations/tokens/blocks/Tokens/Tokens.module.scss
@@ -1,21 +1,21 @@
 .tokens {
   border-collapse: collapse;
   line-height: 1.25;
-  margin-block: var(--mobius-spacing-md);
+  margin-block: var(--evg-spacing-md);
   width: 100%;
 
   th,
   td {
-    border: 1px solid var(--mobius-color-sky-50);
-    font-size: var(--mobius-font-size-sm);
-    padding: var(--mobius-spacing-sm);
+    border: 1px solid var(--evg-color-sky-50);
+    font-size: var(--evg-font-size-sm);
+    padding: var(--evg-spacing-sm);
     width: 33.33%;
   }
 
   th {
     background-color: color-mix(
       in srgb,
-      var(--mobius-color-sky-25) 50%,
+      var(--evg-color-sky-25) 50%,
       transparent 50%
     );
     text-align: left;
@@ -28,7 +28,7 @@
   tr:nth-child(even) td {
     background-color: color-mix(
       in srgb,
-      var(--mobius-color-sky-25) 25%,
+      var(--evg-color-sky-25) 25%,
       transparent 75%
     );
   }
@@ -52,7 +52,7 @@
     }
 
     &--radius {
-      border: 1px solid var(--mobius-color-neutral);
+      border: 1px solid var(--evg-color-neutral);
       border-radius: var(--token-preview) 0 0 0;
       border-width: 2px 0 0 2px;
       height: 2rem;
@@ -66,8 +66,8 @@
     }
 
     &--spacing {
-      background: var(--mobius-color-neutral-light);
-      border: 2px solid var(--mobius-color-neutral);
+      background: var(--evg-color-neutral-light);
+      border: 2px solid var(--evg-color-neutral);
       border-width: 0 2px;
       height: 1rem;
       width: var(--token-preview);
