--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,5 @@
 // Set a default font path which works for dependants (this gets overridden by the Storybook SASS so it resolves correctly)
-$mobius-font-path: '~@etchteam/mobius/src/assets/fonts' !default;
+$evg-font-path: '~@wrap.ngo/evergreen/src/assets/fonts' !default;
 
 // Optional font import
 @font-face {
@@ -8,10 +8,8 @@ $mobius-font-path: '~@etchteam/mobius/src/assets/fonts' !default;
   font-style: normal;
   font-weight: 400;
   src:
-    url('#{$mobius-font-path}/MarrSansCondensed-Regular-Web.woff')
-      format('woff'),
-    url('#{$mobius-font-path}/MarrSansCondensed-Regular-Web.woff2')
-      format('woff2');
+    url('#{$evg-font-path}/MarrSansCondensed-Regular-Web.woff') format('woff'),
+    url('#{$evg-font-path}/MarrSansCondensed-Regular-Web.woff2') format('woff2');
 }
 
 @font-face {
@@ -20,6 +18,6 @@ $mobius-font-path: '~@etchteam/mobius/src/assets/fonts' !default;
   font-style: normal;
   font-weight: 700;
   src:
-    url('#{$mobius-font-path}/MarrSansCondensed-Bold-Web.woff') format('woff'),
-    url('#{$mobius-font-path}/MarrSansCondensed-Bold-Web.woff2') format('woff2');
+    url('#{$evg-font-path}/MarrSansCondensed-Bold-Web.woff') format('woff'),
+    url('#{$evg-font-path}/MarrSansCondensed-Bold-Web.woff2') format('woff2');
 }
