--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -1,31 +1,31 @@
 $colors: (
-  'grey': var(--mobius-container-color-grey),
-  'black': var(--mobius-container-color-black),
-  'greyLight': var(--mobius-container-color-grey-light),
-  'blue': var(--mobius-container-color-blue),
-  'blueMid': var(--mobius-container-color-blue-mid),
-  'blueDark': var(--mobius-container-color-blue-dark),
-  'blueLight': var(--mobius-container-color-blue-light),
-  'blueMuted': var(--mobius-container-color-blue-muted),
-  'green': var(--mobius-container-color-green),
-  'greenDark': var(--mobius-container-color-green-dark),
-  'greenLight': var(--mobius-container-color-green-light),
-  'cream': var(--mobius-container-color-cream),
-  'yellow': var(--mobius-container-color-yellow),
-  'white': var(--mobius-container-color-white),
-  'red': var(--mobius-container-color-red),
-  'brown': var(--mobius-container-color-brown),
-  'orange': var(--mobius-container-color-orange),
-  'pink': var(--mobius-container-color-pink),
-  'magenta': var(--mobius-container-color-magenta),
-  'maroon': var(--mobius-container-color-maroon),
-  'purple': var(--mobius-container-color-purple),
-  'duckEgg': var(--mobius-container-color-duck-egg),
-  'transparent': var(--mobius-container-color-transparent),
-  'no-stream': var(--mobius-color-no-stream),
-  'dry-stream': var(--mobius-color-dry-stream),
-  'residual-stream': var(--mobius-color-residual-stream),
-  'food-stream': var(--mobius-color-food-stream),
-  'garden-stream': var(--mobius-color-garden-stream),
-  'organic-stream': var(--mobius-color-organic-stream),
+  'grey': var(--evg-container-color-grey),
+  'black': var(--evg-container-color-black),
+  'greyLight': var(--evg-container-color-grey-light),
+  'blue': var(--evg-container-color-blue),
+  'blueMid': var(--evg-container-color-blue-mid),
+  'blueDark': var(--evg-container-color-blue-dark),
+  'blueLight': var(--evg-container-color-blue-light),
+  'blueMuted': var(--evg-container-color-blue-muted),
+  'green': var(--evg-container-color-green),
+  'greenDark': var(--evg-container-color-green-dark),
+  'greenLight': var(--evg-container-color-green-light),
+  'cream': var(--evg-container-color-cream),
+  'yellow': var(--evg-container-color-yellow),
+  'white': var(--evg-container-color-white),
+  'red': var(--evg-container-color-red),
+  'brown': var(--evg-container-color-brown),
+  'orange': var(--evg-container-color-orange),
+  'pink': var(--evg-container-color-pink),
+  'magenta': var(--evg-container-color-magenta),
+  'maroon': var(--evg-container-color-maroon),
+  'purple': var(--evg-container-color-purple),
+  'duckEgg': var(--evg-container-color-duck-egg),
+  'transparent': var(--evg-container-color-transparent),
+  'no-stream': var(--evg-color-no-stream),
+  'dry-stream': var(--evg-color-dry-stream),
+  'residual-stream': var(--evg-color-residual-stream),
+  'food-stream': var(--evg-color-food-stream),
+  'garden-stream': var(--evg-color-garden-stream),
+  'organic-stream': var(--evg-color-organic-stream),
 );
