--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,3 +1,3 @@
-$mobius-font-path: '../src/assets/fonts';
+$evg-font-path: '../src/assets/fonts';
 @import '../src/styles/main';
 @import '../src/styles/fonts';
