--- a/src/components/react/canvas/Card/Card.module.scss
+++ b/src/components/react/canvas/Card/Card.module.scss
@@ -1,27 +1,27 @@
 .card {
-  --card-border-color: var(--mobius-skin-border-color);
+  --card-border-color: var(--evg-skin-border-color);
 
-  background: var(--mobius-skin-background);
+  background: var(--evg-skin-background);
   border: 1px solid transparent;
   border-radius: var(--card-border-radius);
-  color: var(--mobius-skin-color);
+  color: var(--evg-skin-color);
   display: block;
   transition:
-    background-color var(--mobius-transition),
-    color var(--mobius-transition),
-    border-color var(--mobius-transition);
+    background-color var(--evg-transition),
+    color var(--evg-transition),
+    border-color var(--evg-transition);
   width: 100%;
 
   &__arrow {
     float: right;
-    font-size: var(--mobius-font-size-xl);
-    padding: var(--mobius-spacing-md);
+    font-size: var(--evg-font-size-xl);
+    padding: var(--evg-spacing-md);
   }
 
   &__header {
     border-bottom: 1px solid transparent;
-    padding: var(--mobius-spacing-md);
-    transition: border-color var(--mobius-transition);
+    padding: var(--evg-spacing-md);
+    transition: border-color var(--evg-transition);
 
     // when there's a card with only a header
     &:last-child {
@@ -38,7 +38,7 @@
 
   &__body {
     &--padded {
-      padding: var(--mobius-spacing-md);
+      padding: var(--evg-spacing-md);
     }
 
     &--border {
@@ -68,35 +68,35 @@
     text-decoration: none;
 
     &:hover {
-      border-color: var(--mobius-input-border-hover);
+      border-color: var(--evg-input-border-hover);
       text-decoration: none;
     }
 
     &:focus {
-      border-color: var(--mobius-input-border-focus);
+      border-color: var(--evg-input-border-focus);
       outline: none;
     }
   }
 
   &--shadow {
-    box-shadow: var(--mobius-shadow);
+    box-shadow: var(--evg-shadow);
   }
 
   &--control {
-    background: var(--mobius-input-background);
-    border: 1px solid var(--mobius-input-border);
-    border-radius: var(--mobius-input-border-radius);
+    background: var(--evg-input-background);
+    border: 1px solid var(--evg-input-border);
+    border-radius: var(--evg-input-border-radius);
   }
 
   &--disabled {
-    background: var(--mobius-skin-background-muted);
+    background: var(--evg-skin-background-muted);
     pointer-events: none;
   }
 
   &--muted,
   &__body--muted {
-    --card-border-color: var(--mobius-skin-border-color-muted);
-    background: var(--mobius-skin-background-muted);
+    --card-border-color: var(--evg-skin-border-color-muted);
+    background: var(--evg-skin-background-muted);
   }
 
   &:has(.card__body--muted) {
