--- a/src/components/react/composition/Sticky/Sticky.module.scss
+++ b/src/components/react/composition/Sticky/Sticky.module.scss
@@ -1,4 +1,4 @@
-@use '~@etchteam/mobius-tokens/dist/breakpoint';
+@use '~@wrap.ngo/tokens/dist/breakpoint';
 
 .sticky {
   position: sticky;
@@ -8,12 +8,12 @@
     max-height: none;
     position: static;
 
-    @media screen and (min-width: breakpoint.$mobius-breakpoint-md) {
+    @media screen and (min-width: breakpoint.$evg-breakpoint-md) {
       position: sticky;
     }
   }
 
-  @media screen and (min-width: breakpoint.$mobius-breakpoint-xl) {
+  @media screen and (min-width: breakpoint.$evg-breakpoint-xl) {
     max-height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
