--- a/src/components/react/content/LoadingSpinner/LoadingSpinner.module.scss
+++ b/src/components/react/content/LoadingSpinner/LoadingSpinner.module.scss
@@ -1,4 +1,4 @@
-@use '~@etchteam/mobius-tokens/dist/breakpoint';
+@use '~@wrap.ngo/tokens/dist/breakpoint';
 
 @keyframes spin {
   0% {
@@ -13,13 +13,12 @@
 .loading-spinner {
   animation: spin 1s linear infinite;
   aspect-ratio: 1;
-  border: calc(var(--mobius-font-size-xl) * 0.2) solid var(--mobius-color-earth);
+  border: calc(var(--evg-font-size-xl) * 0.2) solid var(--evg-color-earth);
   border-radius: 50%;
-  border-top: calc(var(--mobius-font-size-xl) * 0.2) solid
-    var(--mobius-color-forest);
-  height: calc(var(--mobius-font-size-xl));
+  border-top: calc(var(--evg-font-size-xl) * 0.2) solid var(--evg-color-forest);
+  height: calc(var(--evg-font-size-xl));
 
-  @media screen and (min-width: breakpoint.$mobius-breakpoint-md) {
-    height: calc(var(--mobius-font-size-xl) * 2);
+  @media screen and (min-width: breakpoint.$evg-breakpoint-md) {
+    height: calc(var(--evg-font-size-xl) * 2);
   }
 }
