--- a/src/components/react/controls/Button/Button.module.scss
+++ b/src/components/react/controls/Button/Button.module.scss
@@ -1,17 +1,17 @@
 @use '../../../../styles/mixins/button';
-@use '~@etchteam/mobius-tokens/dist/breakpoint';
+@use '~@wrap.ngo/tokens/dist/breakpoint';
 
 .button {
   $types: primary, secondary, positive, negative;
   @include button.default;
-  border-color: var(--mobius-button-border-color);
+  border-color: var(--evg-button-border-color);
 
   &:hover {
-    border-color: var(--mobius-button-border-color-hover);
+    border-color: var(--evg-button-border-color-hover);
   }
 
   &:focus {
-    border-color: var(--mobius-button-border-color-focus);
+    border-color: var(--evg-button-border-color-focus);
   }
 
   &:active {
@@ -21,18 +21,18 @@
 
   &--loading,
   &[disabled] {
-    background: var(--mobius-button-background-disabled);
-    border-color: var(--mobius-button-border-color-disabled);
-    color: var(--mobius-button-color-disabled);
+    background: var(--evg-button-background-disabled);
+    border-color: var(--evg-button-border-color-disabled);
+    color: var(--evg-button-color-disabled);
     pointer-events: none;
   }
 
   &--icon {
     aspect-ratio: 1;
-    line-height: var(--mobius-font-line-height);
+    line-height: var(--evg-font-line-height);
     min-height: 0;
     min-width: 0;
-    padding: var(--mobius-spacing-xs) var(--mobius-spacing-sm);
+    padding: var(--evg-spacing-xs) var(--evg-spacing-sm);
   }
 
   &--block {
@@ -43,7 +43,7 @@
       display: block;
       width: 100%;
 
-      @media (min-width: breakpoint.$mobius-breakpoint-md) {
+      @media (min-width: breakpoint.$evg-breakpoint-md) {
         display: inline-block;
         width: auto;
       }
@@ -53,33 +53,33 @@
   &--small {
     min-height: 2.25rem;
     min-width: 5.5rem;
-    padding: calc(var(--mobius-spacing-xs) - var(--mobius-button-border-width))
-      var(--mobius-spacing-sm);
+    padding: calc(var(--evg-spacing-xs) - var(--evg-button-border-width))
+      var(--evg-spacing-sm);
   }
 
   @each $type in $types {
     &--#{$type} {
-      background: var(--mobius-button-background-#{$type});
-      border-color: var(--mobius-button-border-color-#{$type});
-      color: var(--mobius-button-color-#{$type});
+      background: var(--evg-button-background-#{$type});
+      border-color: var(--evg-button-border-color-#{$type});
+      color: var(--evg-button-color-#{$type});
 
       &:hover {
-        background: var(--mobius-button-background-hover-#{$type});
-        border-color: var(--mobius-button-border-color-hover-#{$type});
-        color: var(--mobius-button-color-hover-#{$type});
+        background: var(--evg-button-background-hover-#{$type});
+        border-color: var(--evg-button-border-color-hover-#{$type});
+        color: var(--evg-button-color-hover-#{$type});
       }
 
       &:focus-within {
-        background: var(--mobius-button-background-focus-#{$type});
-        border-color: var(--mobius-button-border-color-focus-#{$type});
-        color: var(--mobius-button-color-focus-#{$type});
+        background: var(--evg-button-background-focus-#{$type});
+        border-color: var(--evg-button-border-color-focus-#{$type});
+        color: var(--evg-button-color-focus-#{$type});
       }
 
       &.button--loading,
       &[disabled] {
-        background: var(--mobius-button-background-disabled-#{$type});
-        border-color: var(--mobius-button-border-color-disabled-#{$type});
-        color: var(--mobius-button-color-disabled-#{$type});
+        background: var(--evg-button-background-disabled-#{$type});
+        border-color: var(--evg-button-border-color-disabled-#{$type});
+        color: var(--evg-button-color-disabled-#{$type});
       }
     }
   }
