--- a/src/components/react/controls/Checkbox/Checkbox.module.scss
+++ b/src/components/react/controls/Checkbox/Checkbox.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   + .checkbox {
-    margin-top: var(--mobius-spacing-sm);
+    margin-top: var(--evg-spacing-sm);
   }
 
   &__input {
@@ -17,7 +17,7 @@
   &__indicator {
     @include forms.indicator;
     align-self: flex-start;
-    border-radius: var(--mobius-radius-xs);
+    border-radius: var(--evg-radius-xs);
 
     .checkbox--checked & {
       background: currentColor;
@@ -28,12 +28,12 @@
     opacity: 0;
     transform: scale(0.9);
     transition:
-      opacity var(--mobius-transition),
-      transform var(--mobius-transition-duration-boing)
-        var(--mobius-transition-timing-boing);
+      opacity var(--evg-transition),
+      transform var(--evg-transition-duration-boing)
+        var(--evg-transition-timing-boing);
 
     .checkbox--checked & {
-      color: var(--mobius-color-white);
+      color: var(--evg-color-white);
       opacity: 1;
       transform: none;
     }
@@ -45,16 +45,16 @@
     .checkbox__indicator {
       &:hover,
       &:focus-within {
-        border-color: var(--mobius-input-border-hover);
+        border-color: var(--evg-input-border-hover);
       }
 
       &:focus-within {
-        background: var(--mobius-input-background-focus);
+        background: var(--evg-input-background-focus);
       }
     }
 
     &.checkbox--invalid .checkbox__indicator {
-      border-color: var(--mobius-color-negative);
+      border-color: var(--evg-color-negative);
     }
 
     &.checkbox--disabled {
@@ -65,11 +65,11 @@
   &--type-input {
     @include forms.input;
     @include forms.input-padding;
-    border-radius: var(--mobius-input-checkradio-border-radius);
+    border-radius: var(--evg-input-checkradio-border-radius);
   }
 
   &--type-list {
-    background: var(--mobius-color-white);
+    background: var(--evg-color-white);
     border-radius: 0;
 
     + .checkbox {
