--- a/src/components/react/controls/Dropdown/Dropdown.module.scss
+++ b/src/components/react/controls/Dropdown/Dropdown.module.scss
@@ -4,8 +4,8 @@
   vertical-align: middle;
 
   &__content {
-    background: var(--mobius-color-white);
-    box-shadow: var(--mobius-shadow);
+    background: var(--evg-color-white);
+    box-shadow: var(--evg-shadow);
     left: auto;
     min-width: 8em;
     opacity: 0;
@@ -15,8 +15,8 @@
     top: 100%;
     transform: translateY(-0.25em);
     transition:
-      opacity var(--mobius-transition),
-      transform var(--mobius-transition);
+      opacity var(--evg-transition),
+      transform var(--evg-transition);
   }
 
   &--open {
