--- a/src/components/react/controls/Slider/Slider.module.scss
+++ b/src/components/react/controls/Slider/Slider.module.scss
@@ -3,25 +3,25 @@
 
 .slider {
   &__input {
-    height: var(--mobius-spacing-thumb);
+    height: var(--evg-spacing-thumb);
     overflow: hidden;
     position: relative;
   }
 
   &__track {
-    border: 1px solid var(--mobius-input-color);
-    border-radius: var(--mobius-radius-md);
+    border: 1px solid var(--evg-input-color);
+    border-radius: var(--evg-radius-md);
     height: 1rem;
     position: absolute;
-    top: calc((var(--mobius-spacing-thumb) - 1rem) / 2);
+    top: calc((var(--evg-spacing-thumb) - 1rem) / 2);
 
     &--upper {
-      background: var(--mobius-color-lime);
+      background: var(--evg-color-lime);
       width: 100%;
     }
 
     &--lower {
-      background: var(--mobius-color-forest-75);
+      background: var(--evg-color-forest-75);
       pointer-events: none;
       right: calc(
         100% * (var(--slider-max) - var(--slider-value)) /
@@ -42,7 +42,7 @@
 
   &__label {
     display: block;
-    font-weight: var(--mobius-font-weight-bold);
+    font-weight: var(--evg-font-weight-bold);
     min-width: 0;
     padding: 0;
 
@@ -57,15 +57,15 @@
 
     .slider {
       &__track {
-        border-color: var(--mobius-color-forest-50);
+        border-color: var(--evg-color-forest-50);
       }
 
       &__track--lower {
-        background: var(--mobius-color-forest-25);
+        background: var(--evg-color-forest-25);
       }
 
       &__track--upper {
-        background: var(--mobius-color-lime-25);
+        background: var(--evg-color-lime-25);
       }
     }
   }
