--- a/src/docs/foundations/tokens/blocks/Breakpoints/Breakpoints.module.scss
+++ b/src/docs/foundations/tokens/blocks/Breakpoints/Breakpoints.module.scss
@@ -3,11 +3,11 @@
 
 .breakpoints {
   &__item {
-    background: var(--mobius-color-neutral-light);
+    background: var(--evg-color-neutral-light);
     display: block;
-    margin: 0 0 var(--mobius-spacing-md);
+    margin: 0 0 var(--evg-spacing-md);
     max-width: var(--token-preview);
-    padding: var(--mobius-spacing-sm);
+    padding: var(--evg-spacing-sm);
     white-space: nowrap;
 
     @each $breakpoint, $size in size.$map {
