--- a/src/styles/base/_scaffolding.scss
+++ b/src/styles/base/_scaffolding.scss
@@ -8,8 +8,8 @@ body {
 }
 
 body {
-  background: var(--mobius-skin-background-muted);
-  color: var(--mobius-skin-color);
+  background: var(--evg-skin-background-muted);
+  color: var(--evg-skin-color);
   margin: 0;
   min-width: 20em;
   padding: 0;
@@ -23,5 +23,5 @@ img {
 
 hr {
   border: 0 none;
-  border-bottom: 1px solid var(--mobius-skin-border-color);
+  border-bottom: 1px solid var(--evg-skin-border-color);
 }
