--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,10 +5,10 @@
 }
 
 body {
-  font-family: var(--mobius-font-family);
-  font-size: var(--mobius-font-size-base);
+  font-family: var(--evg-font-family);
+  font-size: var(--evg-font-size-base);
   -webkit-font-smoothing: antialiased;
-  line-height: var(--mobius-font-line-height);
+  line-height: var(--evg-font-line-height);
 }
 
 h1,
@@ -24,38 +24,38 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: var(--mobius-font-family-heading);
+  font-family: var(--evg-font-family-heading);
   text-transform: uppercase;
 }
 
 h1 {
-  font-size: var(--mobius-font-size-h1);
-  font-weight: var(--mobius-font-weight-black);
+  font-size: var(--evg-font-size-h1);
+  font-weight: var(--evg-font-weight-black);
 }
 
 h2 {
-  font-size: var(--mobius-font-size-h2);
+  font-size: var(--evg-font-size-h2);
 }
 
 h3 {
-  font-size: var(--mobius-font-size-h3);
+  font-size: var(--evg-font-size-h3);
 }
 
 h4 {
-  font-size: var(--mobius-font-size-h4);
+  font-size: var(--evg-font-size-h4);
 }
 
 h5 {
-  font-size: var(--mobius-font-size-h5);
+  font-size: var(--evg-font-size-h5);
 }
 
 h6 {
-  font-size: var(--mobius-font-size-h6);
+  font-size: var(--evg-font-size-h6);
 }
 
 p {
-  line-height: var(--mobius-font-line-height-lg);
-  margin-bottom: var(--mobius-spacing-sm);
+  line-height: var(--evg-font-line-height-lg);
+  margin-bottom: var(--evg-spacing-sm);
   margin-top: 0;
 
   &:last-child {
@@ -64,17 +64,17 @@ p {
 }
 
 a {
-  color: var(--mobius-skin-link-color);
+  color: var(--evg-skin-link-color);
   font-weight: var(--link-font-weight);
-  text-decoration: var(--mobius-skin-link-text-decoration);
+  text-decoration: var(--evg-skin-link-text-decoration);
 
   &:hover {
-    text-decoration: var(--mobius-skin-link-text-decoration-hover);
+    text-decoration: var(--evg-skin-link-text-decoration-hover);
   }
 }
 
 b,
 strong,
 th {
-  font-weight: var(--mobius-font-weight-bold);
+  font-weight: var(--evg-font-weight-bold);
 }
