--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @use '~normalize.css/normalize';
-@use '~@etchteam/mobius-tokens/dist';
+@use '~@wrap.ngo/tokens/dist';
 
 @use 'base/scaffolding';
 @use 'base/typography';
