--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -1,52 +1,52 @@
 @mixin input() {
-  background: var(--mobius-input-background);
-  border: 1px solid var(--mobius-input-border);
-  border-radius: var(--mobius-input-border-radius);
-  color: var(--mobius-input-color);
+  background: var(--evg-input-background);
+  border: 1px solid var(--evg-input-border);
+  border-radius: var(--evg-input-border-radius);
+  color: var(--evg-input-color);
   display: flex;
   line-height: 1.75;
   position: relative;
   transition:
-    border-color var(--mobius-transition),
-    background-color var(--mobius-transition);
+    border-color var(--evg-transition),
+    background-color var(--evg-transition);
 
   &:hover {
-    border-color: var(--mobius-input-border-hover);
+    border-color: var(--evg-input-border-hover);
   }
 
   &:focus-within {
-    background: var(--mobius-input-background-focus);
-    border-color: var(--mobius-input-border-focus);
+    background: var(--evg-input-background-focus);
+    border-color: var(--evg-input-border-focus);
     outline-color: var(
-      --mobius-input-outline-color-focus-webkit,
-      --mobius-input-outline-color-focus
+      --evg-input-outline-color-focus-webkit,
+      --evg-input-outline-color-focus
     );
-    outline-offset: var(--mobius-input-outline-offset-focus);
-    outline-style: var(--mobius-input-outline-style-focus);
-    outline-width: var(--mobius-input-outline-width-focus);
+    outline-offset: var(--evg-input-outline-offset-focus);
+    outline-style: var(--evg-input-outline-style-focus);
+    outline-width: var(--evg-input-outline-width-focus);
   }
 
   &--valid {
-    border-color: var(--mobius-color-positive);
+    border-color: var(--evg-color-positive);
   }
 
   &--invalid {
-    border-color: var(--mobius-color-negative);
+    border-color: var(--evg-color-negative);
   }
 
   &--pending,
   &--approved,
   &--declined {
     &::before {
-      border-bottom-left-radius: var(--mobius-input-border-radius);
-      border-top-left-radius: var(--mobius-input-border-radius);
+      border-bottom-left-radius: var(--evg-input-border-radius);
+      border-top-left-radius: var(--evg-input-border-radius);
     }
   }
 }
 
 @mixin input-disabled() {
-  background: var(--mobius-input-background-disabled);
-  color: var(--mobius-input-color-disabled);
+  background: var(--evg-input-background-disabled);
+  color: var(--evg-input-color-disabled);
   cursor: not-allowed;
   pointer-events: none;
 }
@@ -60,7 +60,7 @@
   border: 0 none;
   color: inherit;
   display: block;
-  line-height: var(--mobius-font-line-height);
+  line-height: var(--evg-font-line-height);
   width: 100%;
 
   &:focus {
@@ -69,14 +69,14 @@
 }
 
 @mixin input-padding() {
-  min-height: var(--mobius-spacing-thumb);
-  padding: var(--mobius-input-padding);
+  min-height: var(--evg-spacing-thumb);
+  padding: var(--evg-input-padding);
 }
 
 // Radios/checkboxes
 @mixin checked() {
-  background: var(--mobius-color-white);
-  color: var(--mobius-input-checked);
+  background: var(--evg-color-white);
+  color: var(--evg-input-checked);
 }
 
 @mixin indicator() {
@@ -84,23 +84,23 @@
   border: 2px solid currentColor;
   display: inline-flex;
   flex-shrink: 0;
-  height: var(--mobius-font-size-lg);
+  height: var(--evg-font-size-lg);
   justify-content: center;
-  margin-right: var(--mobius-spacing-sm);
-  margin-top: var(--mobius-spacing-xs);
+  margin-right: var(--evg-spacing-sm);
+  margin-top: var(--evg-spacing-xs);
   position: relative;
   transition:
-    background var(--mobius-transition),
-    border-color var(--mobius-transition),
-    color var(--mobius-transition);
-  width: var(--mobius-font-size-lg);
+    background var(--evg-transition),
+    border-color var(--evg-transition),
+    color var(--evg-transition);
+  width: var(--evg-font-size-lg);
 }
 
 @mixin label() {
   align-items: center;
-  color: var(--mobius-skin-color);
+  color: var(--evg-skin-color);
   display: flex;
-  font-size: var(--mobius-font-size-base);
-  font-weight: var(--mobius-font-weight-bold);
-  min-height: var(--mobius-spacing-thumb);
+  font-size: var(--evg-font-size-base);
+  font-weight: var(--evg-font-weight-bold);
+  min-height: var(--evg-spacing-thumb);
 }
