--- a/src/styles/mixins/loading.scss
+++ b/src/styles/mixins/loading.scss
@@ -5,7 +5,7 @@
   user-select: none;
 
   &::before {
-    background-color: var(--mobius-skin-color);
+    background-color: var(--evg-skin-color);
     content: '';
     inset: 0;
     opacity: 0.075;
@@ -17,7 +17,7 @@
     background-image: linear-gradient(
       to right,
       transparent 0,
-      var(--mobius-skin-background) 60%,
+      var(--evg-skin-background) 60%,
       transparent
     );
     content: '';
