--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -1,54 +1,54 @@
 $colors: (
-  'forest': var(--mobius-color-forest),
-  'forest-75': var(--mobius-color-forest-75),
-  'forest-50': var(--mobius-color-forest-50),
-  'forest-25': var(--mobius-color-forest-25),
-  'earth': var(--mobius-color-earth),
-  'earth-75': var(--mobius-color-earth-75),
-  'earth-50': var(--mobius-color-earth-50),
-  'earth-25': var(--mobius-color-earth-25),
-  'sand': var(--mobius-color-sand),
-  'sand-75': var(--mobius-color-sand-75),
-  'sand-50': var(--mobius-color-sand-50),
-  'sand-25': var(--mobius-color-sand-25),
-  'lime': var(--mobius-color-lime),
-  'lime-75': var(--mobius-color-lime-75),
-  'lime-50': var(--mobius-color-lime-50),
-  'lime-25': var(--mobius-color-lime-25),
-  'sky': var(--mobius-color-sky),
-  'sky-75': var(--mobius-color-sky-75),
-  'sky-50': var(--mobius-color-sky-50),
-  'sky-25': var(--mobius-color-sky-25),
-  'rose': var(--mobius-color-rose),
-  'rose-75': var(--mobius-color-rose-75),
-  'rose-50': var(--mobius-color-rose-50),
-  'rose-25': var(--mobius-color-rose-25),
-  'cloud': var(--mobius-color-cloud),
-  'cloud-75': var(--mobius-color-cloud-75),
-  'coal': var(--mobius-color-coal),
-  'steel': var(--mobius-color-steel),
-  'lemon': var(--mobius-color-lemon),
-  'orange': var(--mobius-color-orange),
-  'lilac': var(--mobius-color-lilac),
-  'violet': var(--mobius-color-violet),
-  'white': var(--mobius-color-white),
-  'black': var(--mobius-color-black),
-  'body': var(--mobius-color-body),
-  'body-muted': var(--mobius-color-body-muted),
-  'background': var(--mobius-color-background),
-  'background-muted': var(--mobius-color-background-muted),
-  'accent': var(--mobius-color-accent),
-  'link': var(--mobius-color-link),
-  'neutral': var(--mobius-color-neutral),
-  'neutral-light': var(--mobius-color-neutral-light),
-  'positive': var(--mobius-color-positive),
-  'positive-light': var(--mobius-color-positive-light),
-  'negative': var(--mobius-color-negative),
-  'negative-light': var(--mobius-color-negative-light),
-  'no-stream': var(--mobius-color-no-stream),
-  'dry-stream': var(--mobius-color-dry-stream),
-  'residual-stream': var(--mobius-color-residual-stream),
-  'food-stream': var(--mobius-color-food-stream),
-  'garden-stream': var(--mobius-color-garden-stream),
-  'organic-stream': var(--mobius-color-organic-stream),
+  'forest': var(--evg-color-forest),
+  'forest-75': var(--evg-color-forest-75),
+  'forest-50': var(--evg-color-forest-50),
+  'forest-25': var(--evg-color-forest-25),
+  'earth': var(--evg-color-earth),
+  'earth-75': var(--evg-color-earth-75),
+  'earth-50': var(--evg-color-earth-50),
+  'earth-25': var(--evg-color-earth-25),
+  'sand': var(--evg-color-sand),
+  'sand-75': var(--evg-color-sand-75),
+  'sand-50': var(--evg-color-sand-50),
+  'sand-25': var(--evg-color-sand-25),
+  'lime': var(--evg-color-lime),
+  'lime-75': var(--evg-color-lime-75),
+  'lime-50': var(--evg-color-lime-50),
+  'lime-25': var(--evg-color-lime-25),
+  'sky': var(--evg-color-sky),
+  'sky-75': var(--evg-color-sky-75),
+  'sky-50': var(--evg-color-sky-50),
+  'sky-25': var(--evg-color-sky-25),
+  'rose': var(--evg-color-rose),
+  'rose-75': var(--evg-color-rose-75),
+  'rose-50': var(--evg-color-rose-50),
+  'rose-25': var(--evg-color-rose-25),
+  'cloud': var(--evg-color-cloud),
+  'cloud-75': var(--evg-color-cloud-75),
+  'coal': var(--evg-color-coal),
+  'steel': var(--evg-color-steel),
+  'lemon': var(--evg-color-lemon),
+  'orange': var(--evg-color-orange),
+  'lilac': var(--evg-color-lilac),
+  'violet': var(--evg-color-violet),
+  'white': var(--evg-color-white),
+  'black': var(--evg-color-black),
+  'body': var(--evg-color-body),
+  'body-muted': var(--evg-color-body-muted),
+  'background': var(--evg-color-background),
+  'background-muted': var(--evg-color-background-muted),
+  'accent': var(--evg-color-accent),
+  'link': var(--evg-color-link),
+  'neutral': var(--evg-color-neutral),
+  'neutral-light': var(--evg-color-neutral-light),
+  'positive': var(--evg-color-positive),
+  'positive-light': var(--evg-color-positive-light),
+  'negative': var(--evg-color-negative),
+  'negative-light': var(--evg-color-negative-light),
+  'no-stream': var(--evg-color-no-stream),
+  'dry-stream': var(--evg-color-dry-stream),
+  'residual-stream': var(--evg-color-residual-stream),
+  'food-stream': var(--evg-color-food-stream),
+  'garden-stream': var(--evg-color-garden-stream),
+  'organic-stream': var(--evg-color-organic-stream),
 );
