--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,21 +1,21 @@
 $sizes: (
-  'base': var(--mobius-font-size-base),
-  'xs': var(--mobius-font-size-xs),
-  'sm': var(--mobius-font-size-sm),
-  'md': var(--mobius-font-size-md),
-  'lg': var(--mobius-font-size-lg),
-  'xl': var(--mobius-font-size-xl),
-  'h1': var(--mobius-font-size-h1),
-  'h2': var(--mobius-font-size-h2),
-  'h3': var(--mobius-font-size-h3),
-  'h4': var(--mobius-font-size-h4),
-  'h5': var(--mobius-font-size-h5),
-  'h6': var(--mobius-font-size-h6),
+  'base': var(--evg-font-size-base),
+  'xs': var(--evg-font-size-xs),
+  'sm': var(--evg-font-size-sm),
+  'md': var(--evg-font-size-md),
+  'lg': var(--evg-font-size-lg),
+  'xl': var(--evg-font-size-xl),
+  'h1': var(--evg-font-size-h1),
+  'h2': var(--evg-font-size-h2),
+  'h3': var(--evg-font-size-h3),
+  'h4': var(--evg-font-size-h4),
+  'h5': var(--evg-font-size-h5),
+  'h6': var(--evg-font-size-h6),
 );
 
 $weights: (
-  'base': var(--mobius-font-weight-base),
-  'light': var(--mobius-font-weight-light),
-  'bold': var(--mobius-font-weight-bold),
-  'black': var(--mobius-font-weight-black),
+  'base': var(--evg-font-weight-base),
+  'light': var(--evg-font-weight-light),
+  'bold': var(--evg-font-weight-bold),
+  'black': var(--evg-font-weight-black),
 );
