--- a/src/styles/utilities/theme.scss
+++ b/src/styles/utilities/theme.scss
@@ -2,7 +2,7 @@
 
 $themes: light, dark, info, attention, neutral, positive, negative;
 
-.m-theme {
+.evg-theme {
   @each $theme in $themes {
     &-#{$theme} {
       @include theme.theme($theme);
